Adjust Flyer color scheme

--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
 
 <!--= PRIMARY PAGE LAYOUT
 =======================================================================-->
-  <body class="landing">
+  <body class="case">
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
       <!-- Banner -->
-      <header role="banner" id="banner" class="grid panel--padded--centered">
+      <header role="banner" id="banner" class="grid panel--padded">
         <div class="grid__col--12">
           <a href="index.html">
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
@@ -174,7 +174,7 @@
       </section>
 
       <!-- Experience -->
-      <section id="experience" class="layer--deux">
+      <section id="experience" class="layer--zero">
         <article class="grid">
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">I have Experience in life</h2>
@@ -197,7 +197,7 @@
       </section>
 
       <!-- Tools -->
-      <section class="layer--trois">
+      <section class="layer--un">
         <article class="grid">
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
@@ -222,7 +222,7 @@
       </section>
 
       <!-- Projects -->
-      <section id="projects" class="layer--quatre">
+      <section id="projects" class="layer--zero">
         <article class="grid">
           <header class="panel--centered">
             <h2 class="headline-secondary--grouped">Projects</h2>
@@ -251,7 +251,7 @@
 
             <ul class="grid__col--12 panel">
               <li>
-                <button href="#" class="button btn--default">Projects Page</button>
+                <button href="#" class="btn--un">Projects Page</button>
                 <!-- <a href="#" class="button">Projects Page</a> -->
               </li>
             </ul>
