Complete first major draft of Flyer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="grid__col--12">
           <a href="index.html">
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-              Something about liking to build things, & how I think dinosaurs are cool. Holla!</h1></a>
+              I'm a full-stack rails developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
         </div>
       </header>
 
@@ -190,7 +190,7 @@
 
           <span class="grid__col--6">
             <span>
-              <img class="img--avatar img--wrap" src="public/images/test_picture_01.jpg" alt="">
+              <img class="img--avatar img--wrap" src="public/images/ali/long_cape.jpg" alt="">
             </span>
           </span>
         </article>
