Differentiate index & flyer, connect index & flyer, prepare for Single-Page-Website (SPW) transition

--- a/flyer.html
+++ b/flyer.html
@@ -98,46 +98,14 @@
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
               I'm a full-stack rails developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
         </div>
+        <ul class="grid__col--12 panel">
+          <li>
+            <button class="btn--un"><a href="index.html">SuitAndCapeHome</a></button>
+            <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
+          </li>
+        </ul>
       </header>
 
-      <!-- Sidebar -->
-      <aside role="navigation" id="sidebar" class="grid panel">
-        <h4 class="headline-menu">
-          <a href="index.html">SuitAndCape</a>
-        </h4>
-        <nav class="navbar">
-          <!-- <ul>
-            <li> -->
-              <!-- <a href="#" class="menu-toggle"> -->
-                <!-- <span>Menu</span> -->
-                <span id="toggle" class="icn--nav-toggle is-displayed-mobile"><b class="srt">Menu</b></span>
-              <!-- </a> -->
-              <!-- <div id="menu"> -->
-                <ul class="nav is-collapsed-mobile">
-                  <li class="nav__item">
-                    <a href="index.html">Home</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="about.html">About</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="projects.html">Projects</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="resume.html">Résumé</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="links.html">Links</a>
-                  </li>
-                  <li class="nav__item">
-                    <a href="flyer.html">Flyer</a>
-                  </li>
-                </ul>
-              <!-- </div> -->
-            <!-- </li>
-          </ul> -->
-        </nav></div>
-      </aside>
 
       <!-- Blurb -->
       <section id="blurb" class="layer--zero">
