Make index & flyer even more similar

--- a/flyer.html
+++ b/flyer.html
@@ -98,12 +98,21 @@
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
               I'm a full-stack rails developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
         </div>
-        <ul class="grid__col--12 panel">
-          <li>
-            <button class="btn--un"><a href="index.html">SuitAndCapeHome</a></button>
-            <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
-          </li>
-        </ul>
+        <div class="grid__col--12 panel--padded">
+          <ul>
+            <li>
+              <button class="btn--un">
+                <a href="index.html">SuitAndCapeHome</a>
+              </button>
+              <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
+            </li>
+  <!--           <li>
+              <button class="btn--un">
+                <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
+              </button>
+            </li> -->
+          </ul>
+        </div>
       </header>
 
 
