--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
 
       <!-- Sidebar -->
       <aside role="navigation" id="sidebar" class="grid panel">
-        <h4 class="headline-menu">
+<!--         <h4 class="headline-menu">
           <a href="index.html">SuitAndCape</a>
-        </h4>
+        </h4> -->
         <nav class="navbar">
           <!-- <ul>
             <li> -->
@@ -124,7 +124,7 @@
                     <a href="projects.html">Projects</a>
                   </li>
                   <li class="nav__item">
-                    <a href="resume.html">Résumé</a>
+                    <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
                   </li>
                   <li class="nav__item">
                     <a href="links.html">Links</a>
