Fix button, then sleep

--- a/flyer.html
+++ b/flyer.html
@@ -101,9 +101,9 @@
         <div class="grid__col--12 panel--padded">
           <ul>
             <li>
-              <button class="btn--un">
-                <a href="index.html">SuitAndCapeHome</a>
-              </button>
+              <a href="index.html">
+                <button class="btn--un">SuitAndCape</button>
+              </a>
               <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
             </li>
   <!--           <li>
@@ -227,7 +227,9 @@
 
             <ul class="grid__col--12 panel">
               <li>
-                <button href="#" class="btn--un">Projects Page</button>
+                <a href="index.html#projects">
+                  <button class="btn--un">Projects Page</button>
+                </a>
                 <!-- <a href="#" class="button">Projects Page</a> -->
               </li>
             </ul>
