--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </header>
 
       <!-- Sidebar -->
-      <aside role="navigation" id="sidebar" class="grid panel">
+      <aside role="navigation" id="sidebar" class="grid panel--centered">
 <!--         <h4 class="headline-menu">
           <a href="index.html">SuitAndCape</a>
         </h4> -->
@@ -250,7 +250,9 @@
 
             <ul class="grid__col--12 panel">
               <li>
-                <button href="#" class="btn--un">Projects Page</button>
+                <a href="#projects">
+                  <button class="btn--un">Projects Page</button>
+                </a>
                 <!-- <a href="#" class="button">Projects Page</a> -->
               </li>
             </ul>
