Remove configure.rb files because you're not using Compass

--- a/flyer.html
+++ b/flyer.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+<!-- flyer.html -->
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
@@ -96,7 +96,7 @@
         <div class="grid__col--12">
           <a href="index.html">
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-              I'm a full-stack rails developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
+              I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
         </div>
         <div class="grid__col--12 panel--padded">
           <ul>
@@ -106,11 +106,6 @@
               </a>
               <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
             </li>
-  <!--           <li>
-              <button class="btn--un">
-                <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
-              </button>
-            </li> -->
           </ul>
         </div>
       </header>
@@ -245,37 +240,37 @@
           </header>
 
           <span class="grid__col--12 panel--centered">
-          <ul class="icons">
-            <li class="nav__item">
-              <a href="#" class="icon fav--email">
-                <span class="label">Email</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--linkedin">
-                <span class="label">LinkedIn</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--github">
-                <span class="label">Github</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--twitter">
-                <span class="label">Twitter</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--dribbble">
-                <span class="label">Dribbble</span>
-              </a>
-            </li>
-          </ul>
+            <ul class="icons">
+              <li class="nav__item">
+                <a href="#" class="icon fav--email">
+                  <span class="label">Email</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--linkedin">
+                  <span class="label">LinkedIn</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--github">
+                  <span class="label">Github</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--twitter">
+                  <span class="label">Twitter</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--dribbble">
+                  <span class="label">Dribbble</span>
+                </a>
+              </li>
+            </ul>
 
-          <ul class="copyright panel">
-            <li>&copy; Ali Esmaili</li>
-          </ul>
+            <ul class="copyright panel">
+              <li>&copy; Ali Esmaili</li>
+            </ul>
           </span>
         </article>
       </footer>
