--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="grid__col--12">
           <a href="index.html">
             <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-              I'm a full-stack rails developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
+              I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
         </div>
       </header>
 
@@ -268,37 +268,37 @@
           </header>
 
           <span class="grid__col--12 panel--centered">
-          <ul class="icons">
-            <li class="nav__item">
-              <a href="#" class="icon fav--email">
-                <span class="label">Email</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--linkedin">
-                <span class="label">LinkedIn</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--github">
-                <span class="label">Github</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--twitter">
-                <span class="label">Twitter</span>
-              </a>
-            </li>
-            <li class="nav__item">
-              <a href="#" class="icon fav--dribbble">
-                <span class="label">Dribbble</span>
-              </a>
-            </li>
-          </ul>
+            <ul class="icons">
+              <li class="nav__item">
+                <a href="#" class="icon fav--email">
+                  <span class="label">Email</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--linkedin">
+                  <span class="label">LinkedIn</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--github">
+                  <span class="label">Github</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--twitter">
+                  <span class="label">Twitter</span>
+                </a>
+              </li>
+              <li class="nav__item">
+                <a href="#" class="icon fav--dribbble">
+                  <span class="label">Dribbble</span>
+                </a>
+              </li>
+            </ul>
 
-          <ul class="copyright panel">
-            <li>&copy; Ali Esmaili</li>
-          </ul>
+            <ul class="copyright panel">
+              <li>&copy; Ali Esmaili</li>
+            </ul>
           </span>
         </article>
       </footer>
