Increase responsive design

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <!-- Sidebar -->
       <aside role="navigation" id="sidebar" class="grid panel--centered">
-<!--         <h4 class="headline-menu">
+        <!-- <h4 class="headline-plaque">
           <a href="index.html">SuitAndCape</a>
         </h4> -->
         <nav class="navbar">
