--- a/flyer.html
+++ b/flyer.html
@@ -102,7 +102,7 @@
           <ul>
             <li>
               <a href="index.html">
-                <button class="btn--un">SuitAndCape</button>
+                <button class="btn--un">SuitAndCape Home</button>
               </a>
               <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
             </li>
@@ -278,6 +278,7 @@
 <!--= SCRIPTS
 =======================================================================-->
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
 
