--- a/about.html
+++ b/about.html
@@ -140,8 +140,30 @@
       </nav>
     </aside>
 
-    <!-- Blurb -->
-    <section id="blurb" class="layer--zero">
+    <!-- About -->
+    <section id="about" class="layer--zero">
+
+        <!-- About navigation -->
+        <div class="grid panel--centered">
+          <div class="grid__col--12">
+            <form action="#" class="swtch">
+              <input type="submit" value="Blurb" class="btn--un">
+            </form>
+            <form action="#" class="swtch">
+              <input type="submit" value="Personal" class="btn--un">
+            </form>
+            <form action="#" class="swtch">
+              <input type="submit" value="Experience" class="btn--un">
+            </form>
+            <form action="#" class="swtch">
+              <input type="submit" value="Tools" class="btn--un">
+            </form>
+<!--             <form action="#" class="swtch">
+              <input type="submit" value="Gallery" class="btn--un">
+            </form> -->
+          </div>
+        </div>
+
       <article class="grid">
         <header class="grid__col--12 panel--centered">
           <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
@@ -220,45 +242,6 @@
       </article>
     </section>
 
-    <!-- Projects -->
-    <section id="projects" class="layer--zero">
-      <article class="grid">
-        <header class="panel--centered">
-          <h2 class="headline-secondary--grouped">Projects</h2>
-        </header>
-
-        <span class="grid__col--12">
-          <span class="grid__col--12 panel--centered">
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
-              <h3>Project One</h3>
-              <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
-            </article>
-
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_05.jpg" alt=""></a>
-              <h3>Project Two</h3>
-              <p class="para-primary">Kinda counted on you being a friend, Can I give it up or give it away</p>
-            </article>
-
-            <article class="grid__col--4">
-              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
-              <h3>Project Three</h3>
-              <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
-            </article>
-          </span>
-
-          <ul class="grid__col--12 panel">
-            <li>
-              <form action="index.html#projects" class="swtch">
-                <input type="submit" value="Projects Page" class="btn--un">
-              </form>
-              <!-- <a href="#" class="button">Projects Page</a> -->
-            </li>
-          </ul>
-        </span>
-      </article>
-    </section>
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
