--- a/flyer.html
+++ b/flyer.html
@@ -91,193 +91,222 @@
     <!--[if lt IE 8]>
       <p class="sad_browser">Your browser is <strong>outdated</strong>.  If you <a href="http://browsehappy.com/">upgrade your browser</a>, you'll have a good time.</p> <![endif]-->
 
-      <!-- Banner -->
-      <header role="banner" id="banner" class="grid panel--main">
-        <div class="grid__col--12">
-          <a href="index.html">
-            <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
-              I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1></a>
-        </div>
-        <div class="grid__col--12 panel--padded">
-          <ul>
+    <!-- Banner -->
+    <header role="banner" id="banner" class="grid panel--main">
+      <div class="grid__col--12">
+        <a href="index.html">
+          <h1 class="headline-primary--grouped">Hi, my name is Ali Esmaili.<br>
+            I'm a full-stack developer, with a penchant for creating & an obsession with dinosaurs.</h1>
+        </a>
+      </div>
+    </header>
+
+    <!-- Sidebar -->
+    <aside role="navigation" id="sidebar" class="grid panel--centered">
+      <!-- <h4 class="headline-plaque">
+        <a href="index.html">SuitAndCape</a>
+      </h4> -->
+      <nav class="navbar">
+        <!-- <ul>
+          <li> -->
+            <!-- <a href="#" class="menu-toggle"> -->
+              <!-- <span>Menu</span> -->
+              <span id="toggle" class="icn--nav-toggle is-displayed-mobile"><b class="srt">Menu</b></span>
+            <!-- </a> -->
+            <!-- <div id="menu"> -->
+              <ul class="nav is-collapsed-mobile">
+                <li class="nav__item">
+                  <a href="index.html">Home</a>
+                </li>
+                <li class="nav__item">
+                  <a href="about.html">About</a>
+                </li>
+                <li class="nav__item">
+                  <a href="projects.html">Projects</a>
+                </li>
+                <li class="nav__item">
+                  <a href="public/resume/Ali_Esmaili-Resume.pdf" target="_blank">Résumé</a>
+                </li>
+                <li class="nav__item">
+                  <a href="links.html">Links</a>
+                </li>
+                <li class="nav__item">
+                  <a href="flyer.html">Flyer</a>
+                </li>
+              </ul>
+            <!-- </div> -->
+          <!-- </li>
+        </ul> -->
+      </nav>
+    </aside>
+
+    <!-- Blurb -->
+    <section id="blurb" class="layer--zero">
+      <article class="grid">
+        <header class="grid__col--12 panel--centered">
+          <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
+          <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
+            Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
+            Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+        </header>
+        <span></span>
+      </article>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="layer--un">
+      <article class="grid">
+        <header class="panel--centered">
+          <h2 class="headline-secondary--grouped">About me as a person</h2>
+        </header>
+        <span class="grid__col--5">
+          VECTOR ICONS HOOK
+        </span>
+
+        <span class="grid__col--6">
+          <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
+            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
+            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
+            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
+            I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
+            I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
+        </span>
+      </article>
+    </section>
+
+    <!-- Experience -->
+    <section id="experience" class="layer--zero">
+      <article class="grid">
+        <header class="panel--centered">
+          <h2 class="headline-secondary--grouped">I have Experience in life</h2>
+        </header>
+
+        <span class="grid__col--6">
+          <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
+          Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
+          Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
+          LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
+        </span>
+
+        <span class="grid__col--5">
+          <span>
+            <img class="img--avatar img--wrap" src="public/images/ali/long_cape.jpg" alt="">
+          </span>
+        </span>
+      </article>
+    </section>
+
+    <!-- Tools -->
+    <section class="layer--un">
+      <article class="grid">
+        <header class="panel--centered">
+          <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
+          <span class="grid__col--12">
+            <h3>Digital</h3>
+            <p class="para-primary">
+              Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
+            </p>
+
+            <h3>Physical</h3>
+            <p class="para-primary">
+              Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
+            </p>
+
+            <h3>Other</h3>
+            <p class="para-primary">
+              Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
+            </p>
+          </span>
+        </header>
+      </article>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="layer--zero">
+      <article class="grid">
+        <header class="panel--centered">
+          <h2 class="headline-secondary--grouped">Projects</h2>
+        </header>
+
+        <span class="grid__col--12">
+          <span class="grid__col--12 panel--centered">
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
+              <h3>Project One</h3>
+              <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
+            </article>
+
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_05.jpg" alt=""></a>
+              <h3>Project Two</h3>
+              <p class="para-primary">Kinda counted on you being a friend, Can I give it up or give it away</p>
+            </article>
+
+            <article class="grid__col--4">
+              <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
+              <h3>Project Three</h3>
+              <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
+            </article>
+          </span>
+
+          <ul class="grid__col--12 panel">
             <li>
-              <a href="index.html">
-                <button class="btn--un">SuitAndCape Home</button>
-              </a>
-              <!-- <a href="#" class="button">SuitAndCapeHome</a> -->
+              <form action="index.html#projects" class="swtch">
+                <input type="submit" value="Projects Page" class="btn--un">
+              </form>
+              <!-- <a href="#" class="button">Projects Page</a> -->
             </li>
           </ul>
-        </div>
-      </header>
+        </span>
+      </article>
+    </section>
 
+    <!-- Footer -->
+    <footer role="contentinfo" id="footer">
+      <article class="grid">
+        <header class="panel--centered">
+          <h2 class="headline-secondary--grouped">Say Hi!</h2>
+        </header>
 
-      <!-- Blurb -->
-      <section id="blurb" class="layer--zero">
-        <article class="grid">
-          <header class="grid__col--12 panel--centered">
-            <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
-            <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-              Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-              Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
-          </header>
-          <span></span>
-        </article>
-      </section>
+        <nav class="grid__col--12 panel--centered">
+          <ul class="icons">
+            <li class="nav__item">
+              <a href="#" class="icon fav--email">
+                <span class="label">Email</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="icon fav--linkedin">
+                <span class="label">LinkedIn</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="icon fav--github">
+                <span class="label">Github</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="icon fav--twitter">
+                <span class="label">Twitter</span>
+              </a>
+            </li>
+            <li class="nav__item">
+              <a href="#" class="icon fav--dribbble">
+                <span class="label">Dribbble</span>
+              </a>
+            </li>
+          </ul>
 
-      <!-- About -->
-      <section id="about" class="layer--un">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">About me as a person</h2>
-          </header>
-          <span class="grid__col--5">
-            VECTOR ICONS HOOK
-          </span>
-
-          <span class="grid__col--6">
-            <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-              I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-              Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-              I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-              I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-              I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
-          </span>
-        </article>
-      </section>
-
-      <!-- Experience -->
-      <section id="experience" class="layer--zero">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">I have Experience in life</h2>
-          </header>
-
-          <span class="grid__col--6">
-            <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
-            Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-            Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
-            LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
-          </span>
-
-          <span class="grid__col--5">
-            <span>
-              <img class="img--avatar img--wrap" src="public/images/ali/long_cape.jpg" alt="">
-            </span>
-          </span>
-        </article>
-      </section>
-
-      <!-- Tools -->
-      <section class="layer--un">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-            <span class="grid__col--12">
-              <h3>Digital</h3>
-              <p class="para-primary">
-                Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
-              </p>
-
-              <h3>Physical</h3>
-              <p class="para-primary">
-                Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
-              </p>
-
-              <h3>Other</h3>
-              <p class="para-primary">
-                Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
-              </p>
-            </span>
-          </header>
-        </article>
-      </section>
-
-      <!-- Projects -->
-      <section id="projects" class="layer--zero">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Projects</h2>
-          </header>
-
-          <span class="grid__col--12">
-            <span class="grid__col--12 panel--centered">
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_04.jpg" alt=""></a>
-                <h3>Project One</h3>
-                <p class="para-primary">And we will never be alone again, 'Cause it doesn't happen every day</p>
-              </article>
-
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_05.jpg" alt=""></a>
-                <h3>Project Two</h3>
-                <p class="para-primary">Kinda counted on you being a friend, Can I give it up or give it away</p>
-              </article>
-
-              <article class="grid__col--4">
-                <a href="#" class="image fit thumb"><img src="public/images/test/test_picture_06.jpg" alt=""></a>
-                <h3>Project Three</h3>
-                <p class="para-primary">Now I thought about what I wanna say, But I never really know where to go</p>
-              </article>
-            </span>
-
-            <ul class="grid__col--12 panel">
-              <li>
-                <a href="index.html#projects">
-                  <button class="btn--un">Projects Page</button>
-                </a>
-                <!-- <a href="#" class="button">Projects Page</a> -->
-              </li>
-            </ul>
-          </span>
-        </article>
-      </section>
-
-      <!-- Footer -->
-      <footer role="contentinfo" id="footer">
-        <article class="grid">
-          <header class="panel--centered">
-            <h2 class="headline-secondary--grouped">Say Hi!</h2>
-          </header>
-
-          <span class="grid__col--12 panel--centered">
-            <ul class="icons">
-              <li class="nav__item">
-                <a href="#" class="icon fav--email">
-                  <span class="label">Email</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="icon fav--linkedin">
-                  <span class="label">LinkedIn</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="icon fav--github">
-                  <span class="label">Github</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="icon fav--twitter">
-                  <span class="label">Twitter</span>
-                </a>
-              </li>
-              <li class="nav__item">
-                <a href="#" class="icon fav--dribbble">
-                  <span class="label">Dribbble</span>
-                </a>
-              </li>
-            </ul>
-
-            <ul class="copyright panel">
-              <li>&copy; Ali Esmaili</li>
-            </ul>
-          </span>
-        </article>
-      </footer>
+          <ul class="copyright panel">
+            <li>&copy; Ali Esmaili</li>
+          </ul>
+        </nav>
+      </article>
+    </footer>
 
 <!--= SCRIPTS
 =======================================================================-->
-    <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="public/js/jquery-2.1.3.js"></script>
     <script type="text/javascript" src="public/js/handlebars-v3.0.1.js"></script>
     <script type="text/javascript" src="public/js/main.js"></script>
     <!-- <script type="text/javascript" src="public/js/main.min.js"></script> -->
