Create about-slideshow, make about slideshow responsive

--- a/flyer.html
+++ b/flyer.html
@@ -153,8 +153,8 @@
       </article>
     </section>
 
-    <!-- About -->
-    <section id="about" class="layer--un">
+    <!-- Personal -->
+    <section id="personal" class="layer--un">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">About me as a person</h2>
@@ -197,7 +197,7 @@
     </section>
 
     <!-- Tools -->
-    <section class="layer--un">
+    <section id="tools" class="layer--un">
       <article class="grid">
         <header class="panel--centered">
           <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
@@ -251,7 +251,7 @@
 
           <ul class="grid__col--12 panel">
             <li>
-              <form action="index.html#projects" class="swtch">
+              <form action="index.html#projects">
                 <input type="submit" value="Projects Page" class="btn--un">
               </form>
               <!-- <a href="#" class="button">Projects Page</a> -->
