--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!-- index.html -->
+<!-- about.html -->
 
 <!DOCTYPE html>
 <!--= IE BROWSER TARGETING
@@ -143,105 +143,98 @@
     <!-- About -->
     <section id="about" class="layer--zero">
 
-        <!-- About navigation -->
-        <div class="grid panel--centered">
-          <div class="grid__col--12">
-            <form action="#" class="swtch">
-              <input type="submit" value="Blurb" class="btn--un">
-            </form>
-            <form action="#" class="swtch">
-              <input type="submit" value="Personal" class="btn--un">
-            </form>
-            <form action="#" class="swtch">
-              <input type="submit" value="Experience" class="btn--un">
-            </form>
-            <form action="#" class="swtch">
-              <input type="submit" value="Tools" class="btn--un">
-            </form>
-<!--             <form action="#" class="swtch">
-              <input type="submit" value="Gallery" class="btn--un">
-            </form> -->
-          </div>
+      <!-- About navigation -->
+      <article class="grid about-nav">
+        <div class="grid__col--12 panel--centered">
+          <form class="btn--un is-collapsed-mobile">
+            <label for="slides_1">Blurb</label>
+          </form>
+          <form class="btn--un is-collapsed-mobile">
+            <label for="slides_2">Personal</label>
+          </form>
+          <form class="btn--un is-collapsed-mobile">
+            <label for="slides_3">Experience</label>
+          </form>
+          <form class="btn--un is-collapsed-mobile">
+            <label for="slides_4">Tools</label>
+          </form>
+          <!-- <form class="btn--un is-collapsed-mobile">
+            <label for="slides_5">Gallery</label>
+          </form> -->
         </div>
+      </article>
 
-      <article class="grid">
-        <header class="grid__col--12 panel--centered">
-          <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
-          <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
-            Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
-            Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
-        </header>
+      <article id="slideshow" class="grid looper">
+        <input type="radio" name="slides" checked="checked" id="slides_1">
+        <input type="radio" name="slides" id="slides_2">
+        <input type="radio" name="slides" id="slides_3">
+        <input type="radio" name="slides" id="slides_4">
+
+        <ul class="grid__col--12">
+          <li class="overscroll">
+            <header class="panel--centered">
+              <h2 class="headline-secondary--grouped">This is a short blurb about myself<br>will end up going</h2>
+              <p class="para-primary">You've got an ugly butt, and it's stupid, butt!  Oh!<br>
+              Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!<br>
+              Oh girl, ugly butt!  Stupid butt!  Oh girl you got an ugly butt!  Oh girl you got an stupid butt!  Uh!</p>
+            </header>
+          </li>
+
+          <li class="overscroll">
+            <header class="panel--centered">
+              <h2 class="headline-secondary--grouped">About me as a person</h2>
+              <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
+              I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
+              Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
+              I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
+              I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
+              I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
+            </header>
+          </li>
+
+          <li class="overscroll">
+            <header class="panel--centered">
+              <h2 class="headline-secondary--grouped">I have Experience in life</h2>
+              <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
+              Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
+              Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
+              LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
+            </header>
+          </li>
+
+          <li class="overscroll">
+            <header class="panel--centered">
+              <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
+              <span class="grid__col--12">
+                <h3>Digital</h3>
+                <p class="para-primary">
+                  Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
+                </p>
+
+                <h3>Physical</h3>
+                <p class="para-primary">
+                  Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
+                </p>
+
+                <h3>Other</h3>
+                <p class="para-primary">
+                  Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
+                </p>
+              </span>
+            </header>
+          </li>
+
+        </ul>
+        <div class="side-scroller is-displayed-mobile">
+          <label for="slides_1" class="arrow"></label>
+          <label for="slides_2" class="arrow"></label>
+          <label for="slides_3" class="arrow"></label>
+          <label for="slides_4" class="arrow"></label>
+          <label for="slides_1" class="jump-start arrow"></label>
+          <label for="slides_4" class="jump-end arrow"></label>
+        </div>
       </article>
     </section>
-
-    <!-- About -->
-    <section id="about" class="layer--un">
-      <article class="grid">
-        <header class="panel--centered">
-          <h2 class="headline-secondary--grouped">About me as a person</h2>
-        </header>
-        <span class="grid__col--5">
-          VECTOR ICONS HOOK
-        </span>
-
-        <span class="grid__col--6">
-          <p class="para-primary">I said come on Fhqwhgads, I said come on Fhqwhgads, everybody to the limit, everybody to the limit, everybody come on fhqwhgads!<br>
-            I said come on fhqwhgads, I said come on fhqwhgads, everybody to the limit - who's that?  He's to the limit, everybody come on fhqwhgads!<br>
-            Come on fhqwhgads.  I see you jockin me, try'n'a play like, you-know-me!<br>
-            I'm like come on fhqwhgads, I said come on fhqwhgads, everybody to the limit, the Cheat is to the limit, everybody come on fhqwhgads!<br>
-            I said ooh ah Fhqwhgads, I said ooh ah Fhqwhgads, who's that fh-huh-hoo-huga-wha, I said who is that Fhqwhgads!<br>
-            I don't know who it is, but it probably is Fhqwhgads, I asked my friend Joe, I asked my friend Jake, they said it was Fhqwhgads!</p>
-        </span>
-      </article>
-    </section>
-
-    <!-- Experience -->
-    <section id="experience" class="layer--zero">
-      <article class="grid">
-        <header class="panel--centered">
-          <h2 class="headline-secondary--grouped">I have Experience in life</h2>
-        </header>
-
-        <span class="grid__col--6">
-          <p class="para-primary">Kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty kitty.<br>
-          Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!  Nana nana nana nana nana nana nana nana Batmaaaaaaan, Batmaaaaaaan!<br>
-          Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Mushroom Mushroom!  Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger Badger - SNAAAKE SNAAAKE OUUUUH IT'S A SNAAAAAKE!  <br>
-          LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL LOLOLOLOLOLOLOL!</p>
-        </span>
-
-        <span class="grid__col--5">
-          <span>
-            <img class="img--avatar img--wrap" src="public/images/ali/long_cape.jpg" alt="">
-          </span>
-        </span>
-      </article>
-    </section>
-
-    <!-- Tools -->
-    <section class="layer--un">
-      <article class="grid">
-        <header class="panel--centered">
-          <h2 class="headline-secondary--grouped">Tools I appreciate working with</h2>
-          <span class="grid__col--12">
-            <h3>Digital</h3>
-            <p class="para-primary">
-              Code, framework, code, framework, code, framework, code, framework, code, framework, code, framework
-            </p>
-
-            <h3>Physical</h3>
-            <p class="para-primary">
-              Manual, powered, manual, powered, manual, powered, manual, powered, manual, powered
-            </p>
-
-            <h3>Other</h3>
-            <p class="para-primary">
-              Thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff, thing, stuff
-            </p>
-          </span>
-        </header>
-      </article>
-    </section>
-
 
     <!-- Footer -->
     <footer role="contentinfo" id="footer">
